actualizacion estylos indicadores kilometros

--- a/src/app/pages/indicadores/indicadores.component.html
+++ b/src/app/pages/indicadores/indicadores.component.html
@@ -270,14 +270,14 @@
                        
                        <dxo-summary>
                            <!-- SUMARY DE GRUPO -->
-                           <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                           <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                           <dxi-group-item column="guadalajara" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                           <dxi-group-item column="hermosillo" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                           <dxi-group-item column="mexicali" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                           <dxi-group-item column="orizaba" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                           <dxi-group-item column="ramosArizpe" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                           <dxi-group-item column="total" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                           <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                           <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                           <dxi-group-item column="guadalajara" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                           <dxi-group-item column="hermosillo" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                           <dxi-group-item column="mexicali" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                           <dxi-group-item column="orizaba" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                           <dxi-group-item column="ramosArizpe" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                           <dxi-group-item column="total" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
                        </dxo-summary>
 
                        <dxo-group-panel [visible]="false"></dxo-group-panel>
@@ -317,23 +317,23 @@
                         
                         <dxo-summary>
                             <!-- SUMARY DE GRUPO -->
-                            <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                            <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                            <dxi-group-item column="guadalajara" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                            <dxi-group-item column="hermosillo" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                            <dxi-group-item column="mexicali" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                            <dxi-group-item column="orizaba" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                            <dxi-group-item column="ramosArizpe" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
-                            <dxi-group-item column="total" summaryType="sum" displayFormat="{0}" valueFormat="$ #,###,###.##;-$ #,##0.##" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                            <dxi-group-item column="cuatitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                            <dxi-group-item column="tultitlan" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                            <dxi-group-item column="guadalajara" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                            <dxi-group-item column="hermosillo" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                            <dxi-group-item column="mexicali" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                            <dxi-group-item column="orizaba" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                            <dxi-group-item column="ramosArizpe" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
+                            <dxi-group-item column="total" summaryType="sum" displayFormat="{0}" [valueFormat]="redondearIK" [showInGroupFooter]="false" [alignByColumn]="true"></dxi-group-item>
         
-                            <dxi-total-item column="cuatitlan" summaryType="avg" valueFormat="$ #,###,###.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
-                            <dxi-total-item column="tultitlan" summaryType="avg" valueFormat="$ #,###,###.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
-                            <dxi-total-item column="guadalajara" summaryType="avg" valueFormat="$ #,###,###.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
-                            <dxi-total-item column="hermosillo" summaryType="avg" valueFormat="$ #,###,###.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
-                            <dxi-total-item column="mexicali" summaryType="avg" valueFormat="$ #,###,###.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
-                            <dxi-total-item column="orizaba" summaryType="avg" valueFormat="$ #,###,###.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
-                            <dxi-total-item column="ramosArizpe" summaryType="avg" valueFormat="$ #,###,###.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
-                            <dxi-total-item column="total" summaryType="avg" valueFormat="$ #,###,###.##;-$ #,##0.##" displayFormat="{0}"></dxi-total-item>
+                            <dxi-total-item column="cuatitlan" summaryType="avg" [valueFormat]="redondearIK" displayFormat="{0}"></dxi-total-item>
+                            <dxi-total-item column="tultitlan" summaryType="avg" [valueFormat]="redondearIK" displayFormat="{0}"></dxi-total-item>
+                            <dxi-total-item column="guadalajara" summaryType="avg" [valueFormat]="redondearIK" displayFormat="{0}"></dxi-total-item>
+                            <dxi-total-item column="hermosillo" summaryType="avg" [valueFormat]="redondearIK" displayFormat="{0}"></dxi-total-item>
+                            <dxi-total-item column="mexicali" summaryType="avg" [valueFormat]="redondearIK" displayFormat="{0}"></dxi-total-item>
+                            <dxi-total-item column="orizaba" summaryType="avg" [valueFormat]="redondearIK" displayFormat="{0}"></dxi-total-item>
+                            <dxi-total-item column="ramosArizpe" summaryType="avg" [valueFormat]="redondearIK" displayFormat="{0}"></dxi-total-item>
+                            <dxi-total-item column="total" summaryType="avg" [valueFormat]="redondearIK" displayFormat="{0}"></dxi-total-item>
                         </dxo-summary>
 
                         <dxo-group-panel [visible]="false"></dxo-group-panel>
@@ -521,10 +521,10 @@
                     <dxo-search-panel [visible]="true" [width]="240" placeholder="Buscar..."></dxo-search-panel>
                     <dxo-header-filter [visible]="true"></dxo-header-filter>
 
-                    <dxi-column dataField="anio" caption="Año" [width]="100"></dxi-column>
-                    <dxi-column dataField="mes" caption="Mes"[width]="70"></dxi-column>
-                    <dxi-column dataField="udN" caption="UdN"[width]="150"></dxi-column>
-                    <dxi-column dataField="noViaje" caption="No. Viaje" [width]="100"></dxi-column>
+                    <dxi-column dataField="anio" caption="Año" [fixed]="true" [width]="100"></dxi-column>
+                    <dxi-column dataField="mes" caption="Mes" [fixed]="true" [width]="70"></dxi-column>
+                    <dxi-column dataField="udN" caption="UdN" [fixed]="true" [width]="150"></dxi-column>
+                    <dxi-column dataField="noViaje" caption="No. Viaje" [fixed]="true" [width]="100"></dxi-column>
                     <dxi-column dataField="operador" caption="Operador" [width]="250"></dxi-column>
                     <dxi-column dataField="cliente" caption="Cliente" [width]="250"></dxi-column>
                     <dxi-column dataField="tracto" caption="Tracto" [width]="100"></dxi-column>
@@ -537,22 +537,22 @@
                     <dxi-column dataField="fecha" caption="Fecha" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
                     <dxi-column dataField="origen" caption="Origen" [width]="180"></dxi-column>
                     <dxi-column dataField="edoOrigen" caption="Edo. Origen" [width]="120"></dxi-column>
-                    <dxi-column dataField="municipioOrigen" caption="Municipio origen" [width]="170"></dxi-column>
+                    <dxi-column dataField="municipioOrigen" caption="Municipio Origen" [width]="170"></dxi-column>
                     <dxi-column dataField="destino" caption="Destino" [width]="180"></dxi-column>
                     <dxi-column dataField="edoDestino" caption="Edo. Destino" [width]="120"></dxi-column>
-                    <dxi-column dataField="municipioDestino" caption="Municipio destino" [width]="170"></dxi-column>
+                    <dxi-column dataField="municipioDestino" caption="Municipio Destino" [width]="170"></dxi-column>
                     <dxi-column dataField="modelo" caption="Modelo" [width]="100"></dxi-column>
-                    <dxi-column dataField="kmsRuta" caption="Kms Ruta"[width]="100"></dxi-column>
-                    <dxi-column dataField="kmsReal" caption="Kms Real" [width]="100"></dxi-column>
+                    <dxi-column dataField="kmsRuta" caption="Kms. Ruta" [format]="separator" [width]="100"></dxi-column>
+                    <dxi-column dataField="kmsReal" caption="Kms. Real" [format]="separator" [width]="100"></dxi-column>
                     <dxi-column dataField="desviacion" caption="Desviación" format="percent" [width]="120"></dxi-column>
-                    <dxi-column dataField="autorizado" caption="Autorizado" [width]="100"></dxi-column>
-                    <dxi-column dataField="kmsReporte" caption="Kms. Reporte" [width]="130"></dxi-column>
-                    <dxi-column dataField="diesel" caption="Diesel" [width]="100"></dxi-column>
+                    <dxi-column dataField="autorizado" caption="Autorizado" [width]="130"></dxi-column>
+                    <dxi-column dataField="kmsReporte" caption="Kms. Reporte" [format]="separator" [width]="130"></dxi-column>
+                    <dxi-column dataField="diesel" caption="Diesel" [format]="separatorKV" [width]="100"></dxi-column>
                     <dxi-column dataField="rendimiento" caption="Rendimiento" [format]="redondearD" [width]="130"></dxi-column>
                     <dxi-column dataField="liquidado" caption="Liquidado" [width]="100"></dxi-column>
-                    <dxi-column dataField="no_liquidacion" caption="No. Liquidación" [width]="100"></dxi-column>
+                    <dxi-column dataField="no_liquidacion" caption="No. Liquidación" [width]="130"></dxi-column>
                     <dxi-column dataField="fecha_liquidacion" caption="Fecha liquidación" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
-                    <dxi-column dataField="mesLiquidacion" caption="Mes liquidación" [width]="120"></dxi-column>
+                    <dxi-column dataField="mesLiquidacion" caption="Mes liquidación" [width]="150"></dxi-column>
                     <dxi-column dataField="despachoViaje" caption="Despacho viaje" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
                     <dxi-column dataField="finViaje" caption="Fin viaje" dataType="date" format="dd/MM/yyyy" [width]="150"></dxi-column>
                     <dxi-column dataField="finalizado" caption="Finalizado" [width]="120"></dxi-column>
