--- a/src/app/pages/proyeccionCostos/proyeccionCostos.component.html
+++ b/src/app/pages/proyeccionCostos/proyeccionCostos.component.html
@@ -65,7 +65,7 @@
                 <dxi-item>
                     <dxi-location screen="md lg" [row]="0" [col]="1"></dxi-location>
                     <dxi-location style="margin-top: 0.5rem" screen="xs sm" [row]="11" [col]="0" [colspan]="12"></dxi-location>
-                    <dx-select-box [items]="arrAnos" displayExpr="anio" valueExpr="idAnio" (onValueChanged)="seleccionarAnio($event)">
+                    <dx-select-box [items]="arrAnos" displayExpr="anio" valueExpr="idAnio"  [value]="arrAnos[0].idAnio" [disabled]="true">
                     </dx-select-box>
                 </dxi-item>
                 <!-- MES -->
@@ -140,18 +140,18 @@
                       <dxo-export [enabled]="true" fileName="Proyección Costos" [customizeExcelCell]="customizeCAER"></dxo-export>
 
                         <!-- <dxi-column dataField="clasificacion" caption="Clasificación" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column> -->
-                        <dxi-column caption="{{myCompania +' - '+ myUdN}}" >
+                        <dxi-column caption="{{myCompania +' - '+ myUdN + ' - OPERATIVO'}}" >
 
 
                             <!-- <dxi-column caption="CONTABILIZADO DEL MES"> -->
                                 <dxi-column dataField="concepto" caption="Concepto"></dxi-column>
-                                <dxi-column dataField="real" caption="REAL" [format]="separator" [allowSorting]="false"></dxi-column>
-                                <dxi-column dataField="realP" caption="%" format="percent"></dxi-column>
-                                <dxi-column dataField="presupuesto" caption="PRESUP" [format]="separator" [allowSorting]="false"></dxi-column>
-                                <dxi-column dataField="presupuestoP" caption="%" format="percent"></dxi-column>
-                                <dxi-column dataField="presupuestoPC" caption="vs Real %" format="percent" [allowSorting]="false"></dxi-column>
-                                <dxi-column dataField="proyeccion" caption="PROYECC" [format]="separator" [allowSorting]="false"></dxi-column>
-                                <dxi-column dataField="proyeccionFactor" caption="PROYECC FACTOR" format="percent" [allowSorting]="false"></dxi-column>
+                                <dxi-column dataField="real" caption="REAL" [format]="separator" [allowSorting]="false" [width]="120"></dxi-column>
+                                <dxi-column dataField="realP" caption="%" format="percent" [width]="80"></dxi-column>
+                                <dxi-column dataField="presupuesto" caption="PRESUP" [format]="separator" [allowSorting]="false" [width]="120"></dxi-column>
+                                <dxi-column dataField="presupuestoP" caption="%" format="percent" [width]="80"></dxi-column>
+                                <dxi-column dataField="presupuestoPC" caption="vs Real %" format="percent" [allowSorting]="false" [width]="80"></dxi-column>
+                                <dxi-column dataField="proyeccion" caption="PROYECC" [format]="separator" [allowSorting]="false" [width]="120"></dxi-column>
+                                <dxi-column dataField="proyeccionFactor" caption="% Factor" format="percent" [allowSorting]="false" [width]="80"></dxi-column>
                             <!-- </dxi-column> -->
                         </dxi-column>
                         <!-- <dxi-column dataField="periodo" caption="Periodo"  headerCellTemplate="headerTemplate"></dxi-column>
@@ -174,18 +174,18 @@
                       <dxo-export [enabled]="true" fileName="Proyección Costos" [customizeExcelCell]="customizeCAER"></dxo-export>
 
                         <!-- <dxi-column dataField="clasificacion" caption="Clasificación" [fixed]="true" headerCellTemplate="headerTemplate"></dxi-column> -->
-                        <dxi-column caption="{{myCompania +' - '+ myUdN}}" >
+                        <dxi-column caption="{{myCompania +' - '+ myUdN+' - CONTABILIZADO'}}" >
 
 
                             <!-- <dxi-column caption="CONTABILIZADO DEL MES"> -->
                                 <dxi-column dataField="concepto" caption="Concepto"></dxi-column>
-                                <dxi-column dataField="real" caption="REAL" [format]="separator" [allowSorting]="false"></dxi-column>
-                                <dxi-column dataField="realP" caption="%" format="percent"></dxi-column>
-                                <dxi-column dataField="presupuesto" caption="PRESUP" [format]="separator" [allowSorting]="false"></dxi-column>
-                                <dxi-column dataField="presupuestoP" caption="%" format="percent"></dxi-column>
-                                <dxi-column dataField="presupuestoPC" caption="vs Real %" format="percent" [allowSorting]="false"></dxi-column>
-                                <dxi-column dataField="proyeccion" caption="PROYECC" [format]="separator" [allowSorting]="false"></dxi-column>
-                                <dxi-column dataField="proyeccionFactor" caption="PROYECC FACTOR" format="percent" [allowSorting]="false"></dxi-column>
+                                <dxi-column dataField="real" caption="REAL" [format]="separator" [allowSorting]="false" [width]="120"></dxi-column>
+                                <dxi-column dataField="realP" caption="%" format="percent" [width]="80"></dxi-column>
+                                <dxi-column dataField="presupuesto" caption="PRESUP" [format]="separator" [allowSorting]="false" [width]="120"></dxi-column>
+                                <dxi-column dataField="presupuestoP" caption="%" format="percent" [width]="80"></dxi-column>
+                                <dxi-column dataField="presupuestoPC" caption="vs Real %" format="percent" [allowSorting]="false" [width]="80"></dxi-column>
+                                <dxi-column dataField="proyeccion" caption="PROYECC" [format]="separator" [allowSorting]="false" [width]="120"></dxi-column>
+                                <dxi-column dataField="proyeccionFactor" caption="% Factor" format="percent" [allowSorting]="false" [width]="80"></dxi-column>
                             <!-- </dxi-column> -->
                         </dxi-column>
                         <!-- <dxi-column dataField="periodo" caption="Periodo"  headerCellTemplate="headerTemplate"></dxi-column>
