--- a/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
+++ b/src/app/pages/ingresos-detallados/ingresos-detallados.component.html
@@ -3,6 +3,21 @@
 <div [id]="'myDiv'" class="content-block dx-card responsive-paddings">
 
     <h3>Resumen</h3>
+
+    <br><br>
+    <div>
+
+        <div class="dx-field">
+
+            <div class="dx-field-value d-block mr-0 ml-auto" style="width: 20%;">
+                <dx-button stylingMode="contained" text="Actualizar" icon="refresh" type="normal" [width]="240" (onClick)="Actualizar($event)">
+                </dx-button>
+            </div>
+
+        </div>
+    </div>
+    <br><br>
+
     <dx-tab-panel>
 
 
@@ -1198,7 +1213,9 @@
     </dx-tab-panel>
 
 
-
+ <!-- LOAD PANEL -->
+ <dx-load-panel #loadPanel shadingColor="rgba(0,0,0,0.4)" [position]="{ of: '#rentCont2' }" [(visible)]="loadingVisible" [showIndicator]="true" [showPane]="true" [shading]="true" [closeOnOutsideClick]="false">
+</dx-load-panel>
 
 
 </div>
