--- a/src/app/pages/carteraClientes/carteraClientes.component.scss
+++ b/src/app/pages/carteraClientes/carteraClientes.component.scss
@@ -33,4 +33,10 @@
     background-color:gray !important; /* optional if you want to change the color */
   }
 
+
+  .border { border: 2px blue dashed; } 
+.mr-0 { margin-right: 0; } 
+.ml-auto { margin-left:auto; } 
+.d-block { display:block; }
+
   
